# nostr-rs-plugin

./: .gitignore  Cargo.toml  README.md
examples/accept1/: Cargo.toml
examples/accept1/src/: lib.rs
examples/welcome/: Cargo.toml
examples/welcome/src/: lib.rs
src/: lib.rs
